--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: Xu.Jin.4864final.package
-Title: What the Package Does (One Line, Title Case)
+Title: EM algorithm for poisson model, and bootstrap method to estimate accuracy
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Yangxuan", "Xu", , "yxu827@uwo.ca", role = c("aut", "cre"),
+           "Ruyi", "Jin", , "rjin49@uwo.ca", role = c("aut"))
+Description: The package includes a function to fit the Poisson model to our data and a function to conduct bootstrap that can provide summary information including the point estimates, standard errors, and 95% confidence intervals for each parameter in the model.
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 URL: https://github.com/YXu120/Xu.Jin.4864final.package
 BugReports: https://github.com/YXu120/Xu.Jin.4864final.package/issues
+Imports: lmer, dplyr
