--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,4 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 URL: https://github.com/YXu120/Xu.Jin.4864final.package
 BugReports: https://github.com/YXu120/Xu.Jin.4864final.package/issues
-Imports: lmer, dplyr, tidyverse
+Imports: lmer, tidyverse
