--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: Xu.Jin.4864final.package
 Title: EM algorithm for poisson model, and bootstrap method to estimate accuracy
 Version: 0.0.0.9000
 Authors@R: 
-    person("Yangxuan", "Xu", , "yxu827@uwo.ca", role = c("aut", "cre"),
-           "Ruyi", "Jin", , "rjin49@uwo.ca", role = c("aut"))
+    person("Yangxuan", "Xu", "yxu827@uwo.ca", role = c("aut", "cre"),
+           "Ruyi", "Jin", "rjin49@uwo.ca", role = c("aut"))
 Description: The package includes a function to fit the Poisson model to our data and a function to conduct bootstrap that can provide summary information including the point estimates, standard errors, and 95% confidence intervals for each parameter in the model.
 License: GPL (>= 3)
 Encoding: UTF-8
