fix check error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,14 @@
 
 export(para_boot)
 export(run_model)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,nest_by)
+importFrom(dplyr,select)
+importFrom(dplyr,summarize)
+importFrom(lme4,glmer)
+importFrom(lme4,lmer)
+importFrom(lme4,ranef)
+importFrom(tibble,tibble)
+importFrom(tidyr,crossing)
