--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 URL: https://github.com/YXu120/Xu.Jin.4864final.package
 BugReports: https://github.com/YXu120/Xu.Jin.4864final.package/issues
-Imports: lme4, tidyverse, readr
+Imports: lme4, tidyverse, readr, dplyr, tibble, tidyr
 Suggests: 
     knitr,
     rmarkdown
